src/test/ui/hr-subtype/hr-subtype.bound_co_a_b_vs_bound_co_a.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:39:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ expected concrete lifetime, found bound lifetime parameter 'a
...
LL | / check! { bound_co_a_b_vs_bound_co_a: (for<'a,'b> fn(Co<'a>, Co<'b>),
LL | |                                       for<'a>    fn(Co<'a>, Co<'a>)) }
   | |______________________________________________________________________- in this macro invocation
   |
   = note: expected enum `std::option::Option<for<'a, 'b> fn(Co<'a>, Co<'b>)>`
              found enum `std::option::Option<for<'a> fn(Co<'a>, Co<'a>)>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
